@@ -1,5 +1,7 @@
 2001-12-04  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Index.pm (slurpindex): Support arrays and hashes
+
 	* Display/KAPVIEW.pm (select_section): Fix warnings when
 	compressing or no CUT present
 
